# dde-file-manager

./: *lo.ts  .clang-format  .clog.toml  .gitignore  .gitlab-ci.yml  .packit.yaml  .project.json  .qmake.conf  .travis.yml  AGENTS.md  CHANGELOG.md  CHANGLOG.md  CMakeLists.txt  LICENSE  LICENSE.OpenSSL  README.md  README.zh_CN.md  REUSE.toml  TODO.md  burn-scheme.html  classes.html  componments-zh.html  componments.html  context-menu-ext-zh.html  crumb-zh.html  crumb.html  dattachedudisks2device-members.html  dattachedudisks2device.html  dattachedvfsdevice-members.html  dattachedvfsdevice.html  dde-file-manager.desktop  dde-file-manager.pro  dde-xdg-user-dirs-update.sh  deepin-file-manager.index  dfilesystemwatcher-members.html  dfilesystemwatcher.html  dfmaddressbar-members.html  dfmaddressbar.html  dfmblockpartition-members.html  dfmblockpartition.html  (+35 more)
autotests/: CMakeLists.txt  README.md  UNIT_TEST_GUIDE.md  UT_RULES.md  dfm_asan_helper.h  dfm_test_main.h  generate-report.py  generate_report.py  run-ut.sh  ut-target-running.sh
autotests/cmake/: DFMBaseTestUtils.cmake  DFMTestUtils.cmake  TestDiscovery.cmake
autotests/dfm-base/: main.cpp
autotests/dfm-extension/: main.cpp  test_dfmextemblemiconplugin.cpp  test_dfmextmenuplugin.cpp
autotests/dfm-framework/: main.cpp  test_backtrace.cpp  test_eventsequence.cpp  test_framelogmanager.cpp
autotests/framework/: mock-factory.h
autotests/libs/: CMakeLists.txt
autotests/libs/dfm-base/: CMakeLists.txt  main.cpp  test_filescanner.cpp  test_protocolutils.cpp  test_settings.cpp
autotests/libs/dfm-extension/: CMakeLists.txt  dfm_extension_stub.cpp  main.cpp  test_dfmextemblem.cpp  test_dfmextemblemiconlayout.cpp  test_dfmextemblemiconplugin.cpp  test_dfmextension_global.cpp  test_dfmextfileoperationhook.cpp  test_dfmextfileplugin.cpp  test_dfmextmenuplugin.cpp  test_dfmextmenuproxy.cpp  test_dfmextwindow.cpp  test_dfmextwindowplugin.cpp  test_dfmextwindowproxy.cpp
autotests/libs/dfm-framework/: CMakeLists.txt  main.cpp  test_backtrace.cpp  test_event.cpp  test_eventchannel.cpp  test_eventdispatcher.cpp  test_eventsequence.cpp  test_framelogmanager.cpp  test_lifecycle.cpp  test_listener.cpp  test_plugin.cpp  test_pluginmanager.cpp  test_pluginmanager_p.cpp  test_pluginmetaobject.cpp  test_pluginquickmetadata.cpp
autotests/libs/textindex/: CMakeLists.txt  main.cpp  test_inotifyfilesystemwatcher.cpp  test_vfsmonitorfilesystemwatcher.cpp
autotests/old/libs/: CMakeLists.txt
autotests/old/plugins/: CMakeLists.txt
autotests/old/services/: CMakeLists.txt
autotests/old/tools/: CMakeLists.txt
autotests/plugins/: CMakeLists.txt
autotests/plugins/ddplugin-background/: CMakeLists.txt  main.cpp  test_backgrounddde.cpp  (+5 more)
autotests/report_generator/: __init__.py  main.py
autotests/services/: CMakeLists.txt
docs/api/: CMakeLists.txt  index.zh_CN.md
examples/appletwindow/: AppletItemEx.qml  CMakeLists.txt  Panel.qml  main.cpp
examples/dfm-extension-example/: CMakeLists.txt  README.md  README.zh_CN.md  dfm-extension-example.cpp  myemblemiconplugin.cpp  myemblemiconplugin.h  myfileplugin.cpp  myfileplugin.h  mymenuplugin.cpp  mymenuplugin.h  mywindowplugin.cpp  mywindowplugin.h
examples/dfmplugin-encrypt-manager-demo/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
examples/folder-preview-example/: CMakeLists.txt  README.md  README.zh_CN.md  dde-folder-preview-plugin.json  foldercontentwidget.cpp  foldercontentwidget.h  folderpreview.cpp  folderpreview.h  folderpreviewplugin.cpp  folderpreviewplugin.h
src/apps/: CMakeLists.txt  config.h.in
src/dfm-base/: CMakeLists.txt  dfm-base-qt5.cmake  dfm-base-qt6.cmake  dfm-base.cmake  dfm_actiontype_defines.h  dfm_base_global.h  dfm_desktop_defines.h  dfm_event_defines.h  dfm_global_defines.h  dfm_menu_defines.h
src/dfm-declarative/: ActionMenu.qml  AnimationHSpliter.qml  CMakeLists.txt
src/dfm-extension/: CMakeLists.txt
src/dfm-framework/: CMakeLists.txt  dfm-framework-qt5.cmake  dfm-framework-qt6.cmake  dfm-framework.cmake  dfm_framework_global.h  dpf.h  framework.cpp  framework.h
src/dfm-gui/: CMakeLists.txt  applet.cpp  applet_p.h  appletfactory.cpp  appletitem.cpp  appletitem_p.h  appletmanager.cpp  appletmanager_p.h  attachedproperty.cpp  attachedproperty_p.h  containment.cpp  containment_p.h  containmentitem.cpp  panel.cpp  panel_p.h  quickutils.cpp  sharedqmlengine.cpp  sharedqmlengine_p.h  shortcutmap.cpp  windowhandle.cpp  windowmanager.cpp  windowmanager_p.h
src/plugins/: CMakeLists.txt
src/services/: CMakeLists.txt  DFMServiceCommon.cmake
tests/: CMakeLists.txt  README.md  all-ut-prj-running.sh  cppcheck-prj-running.sh  readme.md  readme.txt  report-daily-check.py  report-daily-check.sh  target-running.sh  test-prj-running.sh  ut-target-running.sh
tests/apps/: CMakeLists.txt
tests/dde-desktop/: main.cpp  test-dde-desktop.pro
tests/dde-dock-plugins/: CMakeLists.txt  sh-dde-dock-plugins.sh  test-dde-dock-plugins.pro
tests/dde-file-manager/: main.cpp  test-dde-file-manager.pro  test.pri  testhelper.h  ut_commandlinemanager.cpp  ut_filemanagerapp.cpp  ut_logutil.cpp  ut_singleapplication.cpp
tests/dde-file-manager-daemon/: main.cpp  test-dde-file-manager-daemon.pro  test.pri
tests/dde-file-manager-lib/: main.cpp  test-dde-file-manager-lib.pro  test.pri  testhelper.h  tst-dde-file-manager-lib.sh
tests/dde-file-manager-plugins/: test-dde-file-manager-plugins.pro
tests/dde-file-thumbnail-tool/: test-dde-file-thumbnail-tool.pro
tests/deepin-anything-server-plugins/: test-deepin-anything-server-plugins.pro
tests/dfm-base/: CMakeLists.txt  main.cpp
tests/dfm-extension/: CMakeLists.txt
tests/dfm-framework/: CMakeLists.txt  main.cpp
tests/disk-mount/: CMakeLists.txt  main.cpp
tests/extractor/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
tests/extractor-test/: CMakeLists.txt  main.cpp  mainwindow.h
tests/filescanner/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  statisticsdialog.cpp  statisticsdialog.h
tests/plugins/: CMakeLists.txt
tests/services/: CMakeLists.txt
tests/tools/: CMakeLists.txt
(+13148 files in other folders)
